--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <section id="about" class="min-h-[80vh] flex items-center">
             <div class="w-full grid grid-cols-1 md:grid-cols-3 gap-8 items-center">
                 <div class="md:col-span-1 flex justify-center">
-                    <img src="https://placehold.co/400x400/0ea5e9/ffffff?text=JD" 
+                    <img src="https://placehold.co/400x400/0ea5e9/ffffff?text=AN" 
                          onerror="this.onerror=null;this.src='https://placehold.co/400x400/cccccc/ffffff?text=Image+Error';"
                          alt="John Doe" 
                          class="w-64 h-64 md:w-80 md:h-80 rounded-full object-cover border-8 border-white dark:border-slate-800 shadow-2xl">
@@ -285,25 +285,21 @@
                 I'm currently open to new opportunities and collaborations. Feel free to reach out if you have a project in mind or just want to connect.
             </p>
             <div class="flex justify-center items-center space-x-8">
-                <a href="mailto:johndoe@example.com" class="text-secondary hover:text-primary transition-colors">
+                <a href="mailto:nalwaleanchal@gmail.com" class="text-secondary hover:text-primary transition-colors">
                     <span class="text-3xl">✉️</span>
                     <span class="block text-sm mt-1">Email</span>
                 </a>
-                <a href="#" class="text-secondary hover:text-primary transition-colors">
+                <a href="https://www.linkedin.com/in/anchal-nalwale-283407291/" class="text-secondary hover:text-primary transition-colors">
                     <span class="text-3xl">🔗</span>
                     <span class="block text-sm mt-1">LinkedIn</span>
                 </a>
-                <a href="#" class="text-secondary hover:text-primary transition-colors">
+                <a href="https://github.com/anchalnalwale" class="text-secondary hover:text-primary transition-colors">
                      <span class="text-3xl">💻</span>
                     <span class="block text-sm mt-1">GitHub</span>
                 </a>
-                <a href="#" class="text-secondary hover:text-primary transition-colors">
+                <a href="https://leetcode.com/u/Anchal_2004/" class="text-secondary hover:text-primary transition-colors">
                      <span class="text-3xl">🏆</span>
                     <span class="block text-sm mt-1">LeetCode</span>
-                </a>
-                <a href="#" class="text-secondary hover:text-primary transition-colors">
-                     <span class="text-3xl">🧑‍💻</span>
-                    <span class="block text-sm mt-1">CodeChef</span>
                 </a>
             </div>
         </section>
