--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         class="fixed top-0 left-0 right-0 z-50 transition-all duration-300 backdrop-blur-sm bg-white/80 dark:bg-slate-900/80">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
-                <a href="#home" class="text-2xl font-bold text-primary">JD</a>
+                <a href="#home" class="text-2xl font-bold text-primary">AN</a>
                 <nav class="hidden md:flex items-center space-x-8">
                     <a href="#about" class="font-medium text-secondary hover:text-primary transition-colors">About</a>
                     <a href="#education"
@@ -105,7 +105,7 @@
                     </div>
                     <div class="timeline-item relative">
                         <h3 class="text-xl font-semibold">Secondary (10th Grade)</h3>
-                        <p class="text-primary font-medium">Tejswini Vidya Mandir(2019 - 2020)</p>
+                        <p class="text-primary font-medium">Tejswini Vidya Mandir (2019 - 2020)</p>
                         <p class="text-secondary mt-1">Completed with a 94% aggregate score.</p>
                     </div>
                 </div>
@@ -116,6 +116,7 @@
             <h2 class="text-3xl font-bold text-center mb-12">Tech Stacks & Skills</h2>
             <div class="max-w-4xl mx-auto">
                 <div class="mb-8 flex justify-center border-b border-slate-300 dark:border-slate-700">
+                    <button class="skill-tab-button p-4 font-semibold" data-tab="languages">Programming Languages</button>
                     <button class="skill-tab-button active p-4 font-semibold" data-tab="frontend">Frontend</button>
                     <button class="skill-tab-button p-4 font-semibold" data-tab="backend">Backend</button>
                     <button class="skill-tab-button p-4 font-semibold" data-tab="database">Database</button>
@@ -269,7 +270,7 @@
     </main>
 
     <footer class="text-center py-6 border-t border-slate-200 dark:border-slate-800">
-        <p class="text-secondary">&copy; 2025 John Doe. All Rights Reserved.</p>
+        <p class="text-secondary">&copy; 2025 Anchal Nalwale. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
