--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <button class="skill-tab-button p-4 font-semibold" data-tab="languages">Programming Languages</button>
                     <button class="skill-tab-button active p-4 font-semibold" data-tab="frontend">Frontend</button>
                     <button class="skill-tab-button p-4 font-semibold" data-tab="backend">Backend</button>
-                    <button class="skill-tab-button p-4 font-semibold" data-tab="database">Database</button>
+                    <button class="skill-tab-button p-4 font-semibold" data-tab="database">Database & Cloud</button>
                     <button class="skill-tab-button p-4 font-semibold" data-tab="tools">Tools & Platforms</button>
                     <button class="skill-tab-button p-4 font-semibold" data-tab="chart">Proficiency Chart</button>
                 </div>
@@ -276,3 +276,17 @@
 </body>
 
 </html>
+
+
+<!-- colossuem
+gssoc
+open source
+cloud internship 
+prodigy -->
+
+<!-- sidcup
+webrtc
+agroconnect
+todolist
+campusties -->
+
