--- a/index.html
+++ b/index.html
@@ -78,10 +78,14 @@
                     <h2 class="text-2xl md:text-3xl font-semibold text-primary mt-2"><span id="typing-text"></span><span
                             class="typing-cursor"></span></h2>
                     <p class="mt-6 text-lg text-secondary max-w-2xl mx-auto md:mx-0">
-                        I am a passionate Full-Stack Developer with a knack for creating dynamic and user-friendly web
-                        applications. This interactive space showcases my journey, skills, and the projects I've poured
-                        my heart into. Explore to learn more about my capabilities and how I can bring value to your
-                        team.
+                        Passionate and driven B.Tech IT student with a solid foundation in front-end development and a
+                        growing interest in
+                        full-stack technologies. Experienced in building responsive web applications using modern
+                        front-end
+                        technologies.With a strong commitment to continuous learning and problem-solving, as
+                        demonstrated through
+                        hands-on projects and hackathon participation. Eager to explore back-end development and cloud
+                        tools.
                     </p>
                 </div>
             </div>
@@ -96,8 +100,8 @@
                         <h3 class="text-xl font-semibold">B.Tech in Information Technology</h3>
                         <p class="text-primary font-medium">Shri Ramdeobaba College of Engineering and Management (2022
                             - 2026)</p>
-                        <p class="text-secondary mt-1">Achieved a CGPA of 8.22. Specialized in Web Development.</p>
-                    </div>
+                        <p class="text-secondary mt-1">Achieved a CGPA of 8.22.</p>
+                    </div>.
                     <div class="timeline-item relative">
                         <h3 class="text-xl font-semibold">Higher Secondary (12th Grade)</h3>
                         <p class="text-primary font-medium">D.D.Nagar (2021 - 2022)</p>
@@ -116,7 +120,8 @@
             <h2 class="text-3xl font-bold text-center mb-12">Tech Stacks & Skills</h2>
             <div class="max-w-4xl mx-auto">
                 <div class="mb-8 flex justify-center border-b border-slate-300 dark:border-slate-700">
-                    <button class="skill-tab-button p-4 font-semibold" data-tab="languages">Programming Languages</button>
+                    <button class="skill-tab-button p-4 font-semibold" data-tab="languages">Programming
+                        Languages</button>
                     <button class="skill-tab-button active p-4 font-semibold" data-tab="frontend">Frontend</button>
                     <button class="skill-tab-button p-4 font-semibold" data-tab="backend">Backend</button>
                     <button class="skill-tab-button p-4 font-semibold" data-tab="database">Database & Cloud</button>
@@ -168,71 +173,99 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div
                     class="section-card rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
-                    <img src="https://placehold.co/600x400/334155/f8fafc?text=Project+Alpha"
+                    <img src="https://placehold.co/600x400/334155/f8fafc?text=SidCup+Website"
                         onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Image+Error';"
                         alt="Project Alpha" class="w-full h-48 object-cover">
                     <div class="p-6">
-                        <h3 class="text-xl font-bold">Project Alpha</h3>
-                        <p class="text-secondary mt-2">A full-featured e-commerce platform with user authentication,
-                            product management, and a payment gateway.</p>
+                        <h3 class="text-xl font-bold">SidCup Family Golf Website</h3>
+                        <p class="text-secondary mt-2">Recreated the official Sidcup Family Golf website to demonstrate
+                            proficiency in front-end web development</p>
                         <div class="mt-4 flex flex-wrap gap-2">
                             <span
-                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">React</span>
+                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">HTML</span>
                             <span
-                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">Node.js</span>
+                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">CSS</span>
                             <span
-                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">MongoDB</span>
+                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">JavaScript</span>
                         </div>
                         <div class="mt-6 flex space-x-4">
-                            <a href="#" class="text-primary font-semibold hover:underline">Live Demo →</a>
-                            <a href="#" class="text-primary font-semibold hover:underline">Source Code →</a>
+                            <a href="https://anchalnalwale.github.io/Sidcup-golf-club/"
+                                class="text-primary font-semibold hover:underline">Live Demo →</a>
+                            <a href="https://github.com/anchalnalwale/Sidcup-golf-club.git"
+                                class="text-primary font-semibold hover:underline">Source Code →</a>
                         </div>
                     </div>
                 </div>
                 <div
                     class="section-card rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
-                    <img src="https://placehold.co/600x400/334155/f8fafc?text=Project+Beta"
+                    <img src="https://placehold.co/600x400/334155/f8fafc?text=To-do+List"
                         onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Image+Error';"
                         alt="Project Beta" class="w-full h-48 object-cover">
                     <div class="p-6">
-                        <h3 class="text-xl font-bold">Project Beta</h3>
-                        <p class="text-secondary mt-2">An interactive data visualization dashboard for tracking
-                            real-time market trends using Chart.js.</p>
+                        <h3 class="text-xl font-bold">To-do List using React</h3>
+                        <p class="text-secondary mt-2">A completely functional to-do list to add, delete and mark as
+                            done.</p>
                         <div class="mt-4 flex flex-wrap gap-2">
                             <span
-                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">Vue.js</span>
+                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">React.js</span>
                             <span
-                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">Chart.js</span>
+                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">HTML</span>
                             <span
-                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">Firebase</span>
+                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">Tailwind
+                                CSS</span>
                         </div>
                         <div class="mt-6 flex space-x-4">
                             <a href="#" class="text-primary font-semibold hover:underline">Live Demo →</a>
-                            <a href="#" class="text-primary font-semibold hover:underline">Source Code →</a>
+                            <a href="https://github.com/anchalnalwale/react-todo-list.git"
+                                class="text-primary font-semibold hover:underline">Source Code →</a>
                         </div>
                     </div>
                 </div>
                 <div
                     class="section-card rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
-                    <img src="https://placehold.co/600x400/334155/f8fafc?text=Project+Gamma"
+                    <img src="https://placehold.co/600x400/334155/f8fafc?text=webRTC"
                         onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Image+Error';"
                         alt="Project Gamma" class="w-full h-48 object-cover">
                     <div class="p-6">
-                        <h3 class="text-xl font-bold">Project Gamma</h3>
-                        <p class="text-secondary mt-2">A collaborative task management application with a drag-and-drop
-                            interface and real-time updates.</p>
+                        <h3 class="text-xl font-bold">WebRTC Project</h3>
+                        <p class="text-secondary mt-2">Developed a real-time video chat application using WebRTC for
+                            peer-to-peer communication.</p>
                         <div class="mt-4 flex flex-wrap gap-2">
+                            <span
+                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">Node.js</span>
+                            <span
+                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">React.js</span>
                             <span
                                 class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">JavaScript</span>
                             <span
                                 class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">Tailwind
                                 CSS</span>
-                            <span
-                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">Python/Flask</span>
                         </div>
                         <div class="mt-6 flex space-x-4">
                             <a href="#" class="text-primary font-semibold hover:underline">Live Demo →</a>
-                            <a href="#" class="text-primary font-semibold hover:underline">Source Code →</a>
+                            <a href="https://github.com/anchalnalwale/webRTC.git" class="text-primary font-semibold hover:underline">Source Code →</a>
+                        </div>
+                    </div>
+                </div>
+                <div
+                    class="section-card rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
+                    <img src="https://placehold.co/600x400/334155/f8fafc?text=AgroConnect+Website"
+                        onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Image+Error';"
+                        alt="Project Gamma" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold">AgroConnect Website</h3>
+                        <p class="text-secondary mt-2">Designed AgroConnect, a platform that bridges farmers and buyers for seamless agricultural product exchange and information sharing.</p>
+                        <div class="mt-4 flex flex-wrap gap-2">
+                            <span
+                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">HTML</span>
+                            <span
+                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">CSS</span>
+                            <span
+                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">JavaScript</span>
+                        </div>
+                        <div class="mt-6 flex space-x-4">
+                            <a href="https://abhinavan2004.github.io/Agro-Connect/" class="text-primary font-semibold hover:underline">Live Demo →</a>
+                            <a href="https://github.com/Abhinavan2004/Agro-Connect.git" class="text-primary font-semibold hover:underline">Source Code →</a>
                         </div>
                     </div>
                 </div>
@@ -289,4 +322,3 @@ webrtc
 agroconnect
 todolist
 campusties -->
-
