Adding new projects

--- a/index.html
+++ b/index.html
@@ -215,7 +215,6 @@
                                 CSS</span>
                         </div>
                         <div class="mt-6 flex space-x-4">
-                            <a href="#" class="text-primary font-semibold hover:underline">Live Demo →</a>
                             <a href="https://github.com/anchalnalwale/react-todo-list.git"
                                 class="text-primary font-semibold hover:underline">Source Code →</a>
                         </div>
@@ -242,8 +241,8 @@
                                 CSS</span>
                         </div>
                         <div class="mt-6 flex space-x-4">
-                            <a href="#" class="text-primary font-semibold hover:underline">Live Demo →</a>
-                            <a href="https://github.com/anchalnalwale/webRTC.git" class="text-primary font-semibold hover:underline">Source Code →</a>
+                            <a href="https://github.com/anchalnalwale/webRTC.git"
+                                class="text-primary font-semibold hover:underline">Source Code →</a>
                         </div>
                     </div>
                 </div>
@@ -254,7 +253,8 @@
                         alt="Project Gamma" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold">AgroConnect Website</h3>
-                        <p class="text-secondary mt-2">Designed AgroConnect, a platform that bridges farmers and buyers for seamless agricultural product exchange and information sharing.</p>
+                        <p class="text-secondary mt-2">Designed AgroConnect, a platform that bridges farmers and buyers
+                            for seamless agricultural product exchange and information sharing.</p>
                         <div class="mt-4 flex flex-wrap gap-2">
                             <span
                                 class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">HTML</span>
@@ -264,8 +264,28 @@
                                 class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">JavaScript</span>
                         </div>
                         <div class="mt-6 flex space-x-4">
-                            <a href="https://abhinavan2004.github.io/Agro-Connect/" class="text-primary font-semibold hover:underline">Live Demo →</a>
-                            <a href="https://github.com/Abhinavan2004/Agro-Connect.git" class="text-primary font-semibold hover:underline">Source Code →</a>
+                            <a href="https://abhinavan2004.github.io/Agro-Connect/"
+                                class="text-primary font-semibold hover:underline">Live Demo →</a>
+                            <a href="https://github.com/Abhinavan2004/Agro-Connect.git"
+                                class="text-primary font-semibold hover:underline">Source Code →</a>
+                        </div>
+                    </div>
+                </div>
+                <div
+                    class="section-card rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
+                    <img src="https://placehold.co/600x400/334155/f8fafc?text=Password+Strength+Checker"
+                        onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Image+Error';"
+                        alt="Project Gamma" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-xl font-bold">Password Strength Checker</h3>
+                        <p class="text-secondary mt-2">A console-based C++ application to assess password strength. It evaluates passwords based on length and character type diversity.</p>
+                        <div class="mt-4 flex flex-wrap gap-2">
+                            <span
+                                class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">C++</span>
+                        </div>
+                        <div class="mt-6 flex space-x-4">
+                            <a href="https://github.com/anchalnalwale/password-strength.git"
+                                class="text-primary font-semibold hover:underline">Source Code →</a>
                         </div>
                     </div>
                 </div>
