Added Certificate session

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                         class="font-medium text-secondary hover:text-primary transition-colors">Experience</a>
                     <a href="#projects"
                         class="font-medium text-secondary hover:text-primary transition-colors">Projects</a>
+                    <a href="#certificates"
+                        class="font-medium text-secondary hover:text-primary transition-colors">Certificates</a>
                     <a href="#contact"
                         class="font-medium text-secondary hover:text-primary transition-colors">Contact</a>
                 </nav>
@@ -57,6 +59,8 @@
                     class="block px-3 py-2 rounded-md text-base font-medium text-secondary hover:text-primary hover:bg-slate-100 dark:hover:bg-slate-800">Experience</a>
                 <a href="#projects"
                     class="block px-3 py-2 rounded-md text-base font-medium text-secondary hover:text-primary hover:bg-slate-100 dark:hover:bg-slate-800">Projects</a>
+                <a href="#certificates"
+                    class="block px-3 py-2 rounded-md text-base font-medium text-secondary hover:text-primary hover:bg-slate-100 dark:hover:bg-slate-800">Certificates</a>
                 <a href="#contact"
                     class="block px-3 py-2 rounded-md text-base font-medium text-secondary hover:text-primary hover:bg-slate-100 dark:hover:bg-slate-800">Contact</a>
             </nav>
@@ -68,7 +72,7 @@
         <section id="about" class="min-h-[80vh] flex items-center">
             <div class="w-full grid grid-cols-1 md:grid-cols-3 gap-8 items-center">
                 <div class="md:col-span-1 flex justify-center">
-                    <img src="https://placehold.co/400x400/0ea5e9/ffffff?text=AN"
+                    <img src="Anchal_img.jpg"
                         onerror="this.onerror=null;this.src='https://placehold.co/400x400/cccccc/ffffff?text=Image+Error';"
                         alt="John Doe"
                         class="w-64 h-64 md:w-80 md:h-80 rounded-full object-cover border-8 border-white dark:border-slate-800 shadow-2xl">
@@ -101,7 +105,7 @@
                         <p class="text-primary font-medium">Shri Ramdeobaba College of Engineering and Management (2022
                             - 2026)</p>
                         <p class="text-secondary mt-1">Achieved a CGPA of 8.22.</p>
-                    </div>.
+                    </div>
                     <div class="timeline-item relative">
                         <h3 class="text-xl font-semibold">Higher Secondary (12th Grade)</h3>
                         <p class="text-primary font-medium">D.D.Nagar (2021 - 2022)</p>
@@ -278,7 +282,8 @@
                         alt="Project Gamma" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-bold">Password Strength Checker</h3>
-                        <p class="text-secondary mt-2">A console-based C++ application to assess password strength. It evaluates passwords based on length and character type diversity.</p>
+                        <p class="text-secondary mt-2">A console-based C++ application to assess password strength. It
+                            evaluates passwords based on length and character type diversity.</p>
                         <div class="mt-4 flex flex-wrap gap-2">
                             <span
                                 class="text-sm font-semibold bg-slate-300 text-slate-800 dark:bg-slate-600 dark:text-slate-100 px-2 py-1 rounded-full">C++</span>
@@ -289,6 +294,140 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section id="certificates" class="py-20">
+            <h2 class="text-3xl font-bold text-center mb-12">My Certificates</h2>
+            <p class="text-center text-lg text-secondary max-w-3xl mx-auto mb-12">
+                These certifications validate my commitment to continuous learning and demonstrate my expertise in
+                various technologies.
+            </p>
+            <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-6">
+                <div class="py-4 px-6 rounded-lg shadow-md flex justify-between items-start">
+                    <div>
+                        <h3 class="text-xl font-bold text-primary">React Basics</h3>
+                        <p class="text-secondary mt-1">Issued by Coursera | October 2024</p>
+                        <div class="mt-2 flex flex-wrap gap-2">
+                            <span
+                                class="text-xs font-medium bg-blue-100 text-blue-800 dark:bg-blue-900 dark:text-blue-100 px-2.5 py-0.5 rounded">React.js</span>
+                        </div>
+                    </div>
+                    <div class="flex-shrink-0 ml-4">
+                        <a href="#" class="inline-flex items-center text-primary font-semibold hover:underline">
+                            View Certificate
+                            <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4m-4-2l4-4m0 0l-4-4m4 4H8">
+                                </path>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="py-4 px-6 rounded-lg shadow-md flex justify-between items-start">
+                    <div>
+                        <h3 class="text-xl font-bold text-primary">Introduction to Git and GitHub</h3>
+                        <p class="text-secondary mt-1">Issued by Coursera | September 2024</p>
+                        <div class="mt-2 flex flex-wrap gap-2">
+                            <span
+                                class="text-xs font-medium bg-green-100 text-green-800 dark:bg-green-900 dark:text-green-100 px-2.5 py-0.5 rounded"></span>
+                            <span
+                                class="text-xs font-medium bg-green-100 text-green-800 dark:bg-green-900 dark:text-green-100 px-2.5 py-0.5 rounded"></span>
+                        </div>
+                    </div>
+                    <div class="flex-shrink-0 ml-4">
+                        <a href="#" class="inline-flex items-center text-primary font-semibold hover:underline">
+                            View Certificate
+                            <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4m-4-2l4-4m0 0l-4-4m4 4H8">
+                                </path>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="py-4 px-6 rounded-lg shadow-md flex justify-between items-start">
+                    <div>
+                        <h3 class="text-xl font-bold text-primary">Introduction to Cloud Computing</h3>
+                        <p class="text-secondary mt-1">Issued by Coursera | July 2025</p>
+                        <div class="mt-2 flex flex-wrap gap-2">
+                            <span
+                                class="text-xs font-medium bg-purple-100 text-purple-800 dark:bg-purple-900 dark:text-purple-100 px-2.5 py-0.5 rounded"></span>
+                            <span
+                                class="text-xs font-medium bg-purple-100 text-purple-800 dark:bg-purple-900 dark:text-purple-100 px-2.5 py-0.5 rounded"></span>
+                            <span
+                                class="text-xs font-medium bg-purple-100 text-purple-800 dark:bg-purple-900 dark:text-purple-100 px-2.5 py-0.5 rounded"></span>
+                        </div>
+                    </div>
+                    <div class="flex-shrink-0 ml-4">
+                        <a href="#" class="inline-flex items-center text-primary font-semibold hover:underline">
+                            View Certificate
+                            <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4m-4-2l4-4m0 0l-4-4m4 4H8">
+                                </path>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="py-4 px-6 rounded-lg shadow-md flex justify-between items-start">
+                    <div>
+                        <h3 class="text-xl font-bold text-primary">English for IT 1</h3>
+                        <p class="text-secondary mt-1">Issued by Cisco | December 2024</p>
+                        <div class="mt-2 flex flex-wrap gap-2">
+                            <span
+                                class="text-xs font-medium bg-yellow-100 text-yellow-800 dark:bg-yellow-900 dark:text-yellow-100 px-2.5 py-0.5 rounded"></span>
+                            <span
+                                class="text-xs font-medium bg-yellow-100 text-yellow-800 dark:bg-yellow-900 dark:text-yellow-100 px-2.5 py-0.5 rounded"></span>
+                            <span
+                                class="text-xs font-medium bg-yellow-100 text-yellow-800 dark:bg-yellow-900 dark:text-yellow-100 px-2.5 py-0.5 rounded"></span>
+                        </div>
+                    </div>
+                    <div class="flex-shrink-0 ml-4">
+                        <a href="#" class="inline-flex items-center text-primary font-semibold hover:underline">
+                            View Certificate
+                            <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4m-4-2l4-4m0 0l-4-4m4 4H8">
+                                </path>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="py-4 px-6 rounded-lg shadow-md flex justify-between items-start">
+                    <div>
+                        <h3 class="text-xl font-bold text-primary">Networking Basics</h3>
+                        <p class="text-secondary mt-1">Issued by Cisco | December 2024</p>
+                        <div class="mt-2 flex flex-wrap gap-2">
+                            <span
+                                class="text-xs font-medium bg-yellow-100 text-pink-800 dark:bg-pink-900 dark:text-yellow-100 px-2.5 py-0.5 rounded"></span>
+                            <span
+                                class="text-xs font-medium bg-yellow-100 text-pink-800 dark:bg-pink-900 dark:text-yellow-100 px-2.5 py-0.5 rounded"></span>
+                            <span
+                                class="text-xs font-medium bg-yellow-100 text-pink-800 dark:bg-pink-900 dark:text-yellow-100 px-2.5 py-0.5 rounded"></span>
+                        </div>
+                    </div>
+                    <div class="flex-shrink-0 ml-4">
+                        <a href="#" class="inline-flex items-center text-primary font-semibold hover:underline">
+                            View Certificate
+                            <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4m-4-2l4-4m0 0l-4-4m4 4H8">
+                                </path>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+
             </div>
         </section>
 
